 * Fix #3324: Win32: Call to undefined function: getmxrr() [default to OFF].
 * Fix #3396: Database upgrade 0.17-jf-10 failed to upgrade.
 * Fix #3400: Reopen a 'closed' bug, the value of 'resolution' is 'reopen' and can't be changed (now resolution / duplicate id can be edited)
 * Sec #3445: User see all information from all projects (if user has access to 0 projects)
 * Fix #3467: Delete user ends up at user not found error.
 * Fix #3475: Reopen bug to custom status possibility.
 * Fix #3479: Reset account preferences of a user results in reset administrators (current) account.
 * Fix #3493: Missing string $s_bug_deleted in German (and some other) translation
 * Fix #3495: Warning even if administrator account is disabled.
 * Fix #3501: No output for print_all_bug_page.php when status=closed, and Hide Status Closed is selected.
 * Fix #3506: PHP error if "duplicate id" refers to a bug that does not exist.
 * Fix #3525: Priority field incorrectly shown on Simple Report page.
 * Fix #3526: Custom field regular expression doesn't prevent invalid bug entry.
 * Fix #3530: Custom fields definitions are not validated.
 * Opt #0000: Added an index on bug_id field in the mantis_bug_file_table.
 * Opt #0000: Removed filtering code redundancy in print report pages (thanks to Lincoln Maskey)
 * Languages: Updated Dutch localisation.
 * Updated copyright to include 2004

2003.12.08  -  0.18.0

 * Fix #3207: LDAP mail lookup was looking for the 'email' attribute instead of the 'mail' attribute.
 * Enh #3335: Added Estonian Language (thanks to Villem Vannas).
 * Fix #3310: Sorting of projects in menu bar.
 * Fix #3330: "Required" fields on Account Profile page.
 * Fix #3333: Support PHPMailer v1.7x.
 * Fix #3334: Invalid links in bug reminder emails.
 * Fix #3353: History not updated in bug deletion email.
 * Fix #3389: Problems upgrading existing users to administrator.
 * Fix #3417: Setting $g_manage_news_threshold to 'DEVELOPER' can't add new news.